# wild-core

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  USAGE_GUIDE.md  docker-compose.yml  main.py  mkdocs.yml  project.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
configs/: detector_default.json  detector_lenient.json  detector_sensitive.json
docs/: agent.md  detector.md  index.md  utils.md
docs/adr/: 0001-repository-foundation.md
infra/docker/: Dockerfile
scripts/: bootstrap  build  check  clean  common.sh  coverage  dev  e2e  fmt  gen-docs  lint  migrate  package  release  sbom  security-scan  test  typecheck  update-deps
src/wildcore/: __init__.py  __main__.py  agent.py  detector.py  utils.py
tests/: __init__.py
tests/e2e/: __init__.py  test_e2e.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: test_detector.py
