[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildcore"
version = "0.1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
urls = {"Homepage" = "https://github.com/ochoaughini/WildCore", "Documentation" = "https://github.com/ochoaughini/WildCore/tree/main/docs"}
description = "WildCore - Advanced AI security and anomaly detection framework"
readme = "README.md"
authors = [{ name = "WildCore Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24,<2.0"]


[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "isort==5.13.2",
    "ruff==0.5.4",
    "mypy==1.10.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pip-tools==7.4.0",
    "build==1.2.1",
    "twine==5.1.0",
    "pip-audit==2.7.2",
    "bandit==1.7.9",
    "detect-secrets==1.4.0",
    "cyclonedx-bom==3.9.5",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.19",
]

full = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
